Updated some styling

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <span>Too low!</span><br />Try again.
           </p>
           <p class="hidden" id="msg-correct">
-            <span>Congrats!</span><br />You found the correct number:
-            <span id="correct-number-succes"></span>
+            <span>Congrats!</span><br />You found the secret number
+            <span id="secret-number-succes"></span>
           </p>
           <p class="hidden" id="msg-gameover">
-            <span>Game over!</span><br />The correct number was
-            <span id="correct-number-fail"></span>.
+            <span>Game over!</span><br />The secret number was
+            <span id="secret-number-fail"></span>
           </p>
         </div>
 
@@ -77,6 +77,6 @@
       </footer>
     </div>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
